updated readme with search data eg

--- a/README.Rmd
+++ b/README.Rmd
@@ -34,43 +34,12 @@ devtools::install_github('ropensci/pangaear')
 library('pangaear')
 ```
 
-### Identify the service
+### Search for data
+
+This is a thin wrapper around the GUI search interface on the page [http://www.pangaea.de/](http://www.pangaea.de/). Everything you can do there, you can do here.
 
 ```{r}
-pg_identify()
-```
-
-### List metadata formats
-
-```{r}
-pg_list_metadata_formats()
-```
-
-### List identifiers
-
-```{r}
-head( pg_list_identifiers(from='2012-01-01', until='2012-01-05') )
-```
-
-### List sets
-
-```{r}
-head( pg_list_sets() )
-```
-
-### List records
-
-```{r}
-res <- pg_list_records(from='2012-01-01', until='2012-01-15')
-head(res$headers); NROW(res$headers)
-```
-
-### Geta a record
-
-```{r}
-record <- pg_get_record(identifier = "oai:pangaea.de:doi:10.1594/PANGAEA.788382")
-record$header
-record$metadata
+pg_search(query='water', bbox=c(-124.2, 41.8, -116.8, 46.1), count=3)
 ```
 
 ### Get data
@@ -80,6 +49,53 @@ res <- pg_data(doi='10.1594/PANGAEA.761032')
 res[[1]]
 ```
 
+Search for data then pass DOI to data function.
+
+```{r}
+res <- pg_search(query='water', bbox=c(-124.2, 41.8, -116.8, 46.1), count=3)
+pg_data(res$doi[3])
+```
+
+### OAI-PMH metadata
+
+#### Identify the service
+
+```{r}
+pg_identify()
+```
+
+#### List metadata formats
+
+```{r}
+pg_list_metadata_formats()
+```
+
+#### List identifiers
+
+```{r}
+head( pg_list_identifiers(from='2012-01-01', until='2012-01-05') )
+```
+
+#### List sets
+
+```{r}
+head( pg_list_sets() )
+```
+
+#### List records
+
+```{r}
+res <- pg_list_records(from='2012-01-01', until='2012-01-15')
+head(res$headers); NROW(res$headers)
+```
+
+#### Geta a record
+
+```{r}
+record <- pg_get_record(identifier = "oai:pangaea.de:doi:10.1594/PANGAEA.788382")
+record$header
+record$metadata
+```
 
 ## Contributors (alphabetical)
 
