--- a/README.Rmd
+++ b/README.Rmd
@@ -113,5 +113,6 @@ pg_get_record(identifier = "oai:pangaea.de:doi:10.1594/PANGAEA.788382")
 * Please [report any issues or bugs](https://github.com/ropensci/pangaear/issues).
 * License: MIT
 * Get citation information for `pangaear` in R doing `citation(package = 'pangaear')`
+* Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
 
 [![ro_footer](http://ropensci.org/public_images/github_footer.png)](http://ropensci.org)
