--- a/README.Rmd
+++ b/README.Rmd
@@ -24,6 +24,12 @@ An R client to interact with the [Pangaea database](https://www.pangaea.de/).
 * Pangaea [OAI-PMH docs](https://wiki.pangaea.de/wiki/OAI-PMH).
 * [OAI-PMH Spec](http://www.openarchives.org/OAI/openarchivesprotocol.html)
 
+## Package API
+
+```{r echo=FALSE, comment=NA, results='asis'}
+cat(paste(" -", paste(getNamespaceExports("pangaear"), collapse = "\n - ")))
+```
+
 ## Installation
 
 Stable version
@@ -62,7 +68,7 @@ Search for data then pass DOI to data function.
 
 ```{r}
 res <- pg_search(query = 'water', bbox = c(-124.2, 41.8, -116.8, 46.1), count = 3)
-pg_data(res$doi[3])
+pg_data(res$doi[3])[1:3]
 ```
 
 ## OAI-PMH metadata
