--- a/README.Rmd
+++ b/README.Rmd
@@ -125,6 +125,9 @@ pg_get_record(identifier = "oai:pangaea.de:doi:10.1594/PANGAEA.788382")
 * Please [report any issues or bugs](https://github.com/ropensci/pangaear/issues).
 * License: MIT
 * Get citation information for `pangaear` in R doing `citation(package = 'pangaear')`
-* Please note that this project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By participating in this project you agree to abide by its terms.
+* Please note that this project is released with a [Contributor Code of Conduct][coc].
+By participating in this project you agree to abide by its terms.
 
 [![ro_footer](https://ropensci.org/public_images/github_footer.png)](https://ropensci.org)
+
+[coc]: https://github.com/ropensci/pangaear/blob/master/CODE_OF_CONDUCT.md
