--- a/README.Rmd
+++ b/README.Rmd
@@ -44,8 +44,7 @@ install.packages("pangaear")
 Dev version
 
 ```{r eval=FALSE}
-install.packages("devtools")
-devtools::install_github('ropensci/pangaear')
+remotes::install_github('ropensci/pangaear')
 ```
 
 ```{r}
